--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 upload.folder=D:
+
+jwt.token.secret = jwttockensecter
+jwt.token.validity = 86400000
